# vulkan_n_body_simulation

./: Cargo.toml  README.md
examples/five_bodies/: config.toml  main.rs
examples/galaxy/: config.toml  main.rs
examples/two_galaxies/: config.toml  main.rs
src/: app.rs  config.rs  galaxy.rs  lib.rs  main.rs
