[package]
name = "vulkan_n_body_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.11", default-features = false, features = ["toml"] }
foldhash = "0.1.5"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.10"

